# umbrel-readonly-bridge

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  umbrel-app.yml
.github/workflows/: ci.yml
scripts/: init-token.sh
src/umbrel_ro_bridge/: __init__.py  __main__.py  fs.py  openclaw_client.py  policy.py  preflight.py  secrets_filter.py  server.py
tests/: test_bridge.py  test_docker_preflight_contracts.py  test_health_sse.py  test_openclaw_client.py  test_packaging.py  test_preflight_tools.py  test_project_metadata.py
tests/e2e/: assert_regressions_detected.sh  image_client_check.py  run_image_e2e.sh
