[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umbrel-ro-bridge"
version = "1.0.4"
description = "Read-only MCP filesystem bridge for Umbrel"
requires-python = ">=3.11"
dependencies = [
    "mcp==1.21.0",
    "uvicorn[standard]==0.34.2",
    "starlette==0.46.2",
    "httpx==0.28.1",
    "python-magic==0.4.27",
    "PyPDF2==3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "httpx-sse>=0.4.0",
]

[project.scripts]
umbrel-ro-bridge = "umbrel_ro_bridge.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/umbrel_ro_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
timeout_func_only = true
